--- a/da/src/css/Header.css
+++ b/da/src/css/Header.css
@@ -9,6 +9,9 @@ ul li {
   margin-left: 20px;
 }
 
+.show-menu {
+  z-index: 99999;
+}
 .menu {
   width: 180px;
   background-image: url(./../img/bg_menu_hover.png);
@@ -17,19 +20,19 @@ ul li {
   display: none;
 }
 
-.list-menu {
+.menu .list-menu {
   border: 2px solid #999;
   padding: 2px 10px 10px 10px;
 }
 
-.list-menu a {
+.menu .list-menu a {
   color: white;
   font-size: 16px;
   text-decoration: none;
   margin-top: 8px;
 }
-.list-menu a:hover,
-.list-menu a:active {
+.menu .list-menu a:hover,
+.menu .list-menu a:active {
   color: red;
   list-style: none;
 }
